added validation to POST and PUT requests
