# controllers/products.js
@@ -2,15 +2,19 @@ const mongodb = require("../db/connect");
 const ObjectId = require("mongodb").ObjectId;
 
 const getDataProducts = async (req, res, next) => {
-  const result = await mongodb
+  const response = await mongodb
     .getDb()
     .db("climbing-shoes-commerce")
     .collection("products")
     .find();
-  result.toArray().then((lists) => {
-    res.setHeader("Content-Type", "application/json");
-    res.status(200).json(lists);
-  });
+    if (!response){
+      res.status(500).json(response.error || 'We got an error here');
+    } else {
+      response.toArray().then((lists) => {
+        res.setHeader("Content-Type", "application/json");
+        res.status(200).json(lists);
+      });
+    }
 };
 
 const createProductEntry = async (req, res) => {
@@ -27,6 +31,28 @@ const createProductEntry = async (req, res) => {
   if (response.acknowledged) {
     res.status(201).json(response);
   } else {
+    res.status(400).json(response.error || 'We got an error here');
+    res.status(500).json(response.error || 'We got an error here');
+  }
+}
+
+const updateProductEntry = async (req, res) => {
+  const userId = new ObjectId(req.params.id);
+
+  const updateProduct = {
+    sku: req.body.sku,
+    name: req.body.name,
+    color: req.body.color,
+    price: req.body.price,
+    img: req.body.img,
+    manufacturer: req.body.manufacturer,
+    size: req.body.size
+  };
+  const response = await mongodb.getDb().db("climbing-shoes-commerce").collection("products").replaceOne({_id: userId}, updateProduct);
+  if (response.acknowledged) {
+    res.status(201).json(response);
+  } else {
+    res.status(400).json(response.error || 'We got an error here');
     res.status(500).json(response.error || 'We got an error here');
   }
 }
@@ -41,11 +67,11 @@ const deleteProductEntry = async(req, res) => {
   } else {
     res.status(500).json(response.error || 'We got an error here');
   }
-
 }
 
 module.exports = { 
     getDataProducts,
     createProductEntry,
+    updateProductEntry,
     deleteProductEntry
 };
